feat: add main page header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Coffee House</title>
+  <link rel="stylesheet" href="assets/normalize/normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="container header__container">
+      <img class="logo" src="assets/svg/logo.svg" alt="logo">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">Favorite coffee</li>
+          <li class="nav__item">About</li>
+          <li class="nav__item">Mobile app</li>
+          <li class="nav__item">Contact us</li>
+        </ul>
+      </nav>
+      <div class="menu">
+        <p class="menu__btn">Menu</p>
+        <img class="menu" src="assets/img/coffee-cup.png" alt="a cup of coffee">
+      </div>
+    </div>
+  </header>
 </body>
 </html>
