--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffee House</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/normalize/normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <!-- HEADER -->
   <header class="header">
     <div class="container header__container">
-      <img class="logo" src="assets/svg/logo.svg" alt="logo">
+      <img class="logo" src="assets/svg/logo.svg" alt="logo" width="100" height="60">
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item">Favorite coffee</li>
-          <li class="nav__item">About</li>
-          <li class="nav__item">Mobile app</li>
-          <li class="nav__item">Contact us</li>
+          <li class="nav__item"><a href="#">Favorite coffee</a></li>
+          <li class="nav__item"><a href="#">About</a></li>
+          <li class="nav__item"><a href="#">Mobile app</a></li>
+          <li class="nav__item"><a href="#">Contact us</a></li>
         </ul>
       </nav>
       <div class="menu">
         <p class="menu__btn">Menu</p>
-        <img class="menu" src="assets/img/coffee-cup.png" alt="a cup of coffee">
+        <img class="menu__img" src="assets/img/coffee-cup.png" alt="a cup of coffee" width="20" height="20">
       </div>
     </div>
   </header>
 </body>
+
 </html>
