--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <img class="logo" src="assets/svg/logo.svg" alt="logo" width="100" height="60">
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#">Favorite coffee</a></li>
-          <li class="nav__item"><a href="#">About</a></li>
-          <li class="nav__item"><a href="#">Mobile app</a></li>
-          <li class="nav__item"><a href="#">Contact us</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Favorite coffee</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">About</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Mobile app</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Contact us</a></li>
         </ul>
       </nav>
       <div class="menu">
         <p class="menu__btn">Menu</p>
-        <img class="menu__img" src="assets/img/coffee-cup.png" alt="a cup of coffee" width="20" height="20">
+        <img class="menu__img" src="assets/img/header/coffee-cup.png" alt="a cup of coffee" width="20" height="20">
       </div>
     </div>
   </header>
