feat: addenjoy section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <section class="enjoy">
+      <div class="container enjoy__container">
+        <img class="enjoy__background" src="assets/img/enjoy/img-hero.jpg" alt="background">
+        <div class="enjoy__content">
+          <h1 class="enjoy__title"><span class="accent">Enjoy</span> premium coffee at our charming cafe</h1>
+          <p class="enjoy__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is
+            a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
+            beverage.</p>
+          <button class="enjoy__btn">Menu</button>
+        </div>
+        <div class="enjoy__empty-contant"></div>
+      </div>
+    </section>
+    <!-- <section class="favourites-coffee"></section>
+    <section class="about"></section>
+    <section class="mobile-app"></section> -->
+  </main>
+
 </body>
 
 </html>
