feat: add favourites-coffee section

--- a/index.html
+++ b/index.html
@@ -45,11 +45,33 @@
         <div class="enjoy__empty-contant"></div>
       </div>
     </section>
-    <!-- <section class="favourites-coffee"></section>
-    <section class="about"></section>
+    <section class="favourites-coffee">
+      <div class="container favourites-coffee__container">
+        <h2 class="favorites-coffee__title">Choose your <span class="accent">favorite</span> coffee</h2>
+        <div class="card__wrapper">
+          <img class="arrow-left" id="left-arrow" src="assets/svg/arrow-left.svg" alt="switch coffee type">
+          <div class="card">
+            <img class="card__img" src="assets/img/favourites-coffee/coffee-slider-1.png"
+              alt="a cup S`mores Frappuccino">
+            <h3 class="card__title">S’mores Frappuccino</h3>
+            <p class="card__text">This new drink takes an espresso and mixes it with brown sugar and cinnamon before
+              being
+              topped with oat milk.</p>
+            <h3 class="card__price">$5.50</h3>
+          </div>
+          <img class="arrow-right" id="right-arrow" src="assets/svg/arrow-right.svg" alt="switch coffee type">
+        </div>
+        <div class="switcher">
+          <div class="switcher__div1"></div>
+          <div class="switcher__div2"></div>
+          <div class="switcher__div3"></div>
+        </div>
+      </div>
+    </section>
+    <!-- <section class="about"></section>
     <section class="mobile-app"></section> -->
   </main>
-
+  <script src="index.js"></script>
 </body>
 
 </html>
