feat: add about section

--- a/index.html
+++ b/index.html
@@ -68,8 +68,28 @@
         </div>
       </div>
     </section>
-    <!-- <section class="about"></section>
-    <section class="mobile-app"></section> -->
+    <section class="about">
+      <div class="container about__container">
+        <h2 class="about__title">Resource is <span class="accent">the perfect and cozy place</span> where you can enjoy
+          a variety of hot beverages,
+          relax, catch up with friends, or get some work done.</h2>
+        <div class="gallery">
+          <div class="gallery__box">
+            <img class="gellery__img" src="assets/img/about/about-1.png" alt="girl stirs coffee">
+          </div>
+          <div class="gallery__box">
+            <img class="gellery__img" src="assets/img/about/about-2.png" alt="man holding a cupof coffee">
+          </div>
+          <div class="gallery__box">
+            <img class="gellery__img" src="assets/img/about/about-3.png" alt="a cup of coffee standing on the plate">
+          </div>
+          <div class="gallery__box4">
+            <img class="gellery__img" src="assets/img/about/about-4.png" alt="couple drinks coffee">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section class="mobile-app"></section> -->
   </main>
   <script src="index.js"></script>
 </body>
