feat: add mobile-app section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container favourites-coffee__container">
         <h2 class="favorites-coffee__title">Choose your <span class="accent">favorite</span> coffee</h2>
         <div class="card__wrapper">
-          <img class="arrow-left" id="left-arrow" src="assets/svg/arrow-left.svg" alt="switch coffee type">
+          <img class="arrow-left" src="assets/svg/arrow-left.svg" alt="switch coffee type">
           <div class="card">
             <img class="card__img" src="assets/img/favourites-coffee/coffee-slider-1.png"
               alt="a cup S`mores Frappuccino">
@@ -89,7 +89,28 @@
         </div>
       </div>
     </section>
-    <!-- <section class="mobile-app"></section> -->
+    <section class="mobile-app">
+      <div class="container mobile-app__container">
+        <div class="mobile-app__content">
+          <h2 class="mobile-app__title"><span class="accent">Download</span> our apps to start ordering</h2>
+          <p class="mobile-app__text">Download the Resource app today and experience the comfort of ordering your
+            favorite coffee from wherever you are</p>
+          <div class="mobile-app__btn-container">
+            <img class="mobile-app__btn-img" src="assets/svg/apple.svg" alt="apple icon">
+            <p class="mobile-app__text-sup">Available on the</p>
+            <p class="mobile-app__text-sub">App Store</p>
+          </div>
+          <div class="mobile-app__btn-container">
+            <img class="mobile-app__btn-img" src="assets/svg/google.svg" alt="google icon">
+            <p class="mobile-app__text-sup">Available on</p>
+            <p class="mobile-app__text-sub">Google Play</p>
+          </div>
+        </div>
+        <div class="mobile-app__img-container">
+          <img class="mobile-app__img" src="assets/img/mobile-app/mobile-screens.png" alt="smartphone">
+        </div>
+      </div>
+    </section>
   </main>
   <script src="index.js"></script>
 </body>
