feat: add coffee list

--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffee House</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="container header__container">
@@ -35,6 +37,75 @@
         </div>
       </div>
     </section>
+    <section class="table">
+      <div class="container table__container">
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-1.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Irish coffee</h3>
+            <p class="table__text">Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
+            <h3 class="table__title">$7.00</h3>
+          </div>
+        </div>
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-2.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Kahlua coffee</h3>
+            <p class="table__text">Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</p>
+            <h3 class="table__title">$7.00</h3>
+          </div>
+        </div>
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-3.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Honey raf</h3>
+            <p class="table__text">Espresso with frothed milk, cream and aromatic honey</p>
+            <h3 class="table__title">$5.50</h3>
+          </div>
+        </div>
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-4.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Ice cappuccino</h3>
+            <p class="table__text">Cappuccino with soft thick foam in summer version with ice</p>
+            <h3 class="table__title">$5.00</h3>
+          </div>
+        </div>
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-5.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Espresso</h3>
+            <p class="table__text uni">Classic black coffee</p>
+            <h3 class="table__title">$4.50</h3>
+          </div>
+        </div>
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-6.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Latte</h3>
+            <p class="table__text">Espresso coffee with the addition of steamed milk and dense milk foam</p>
+            <h3 class="table__title">$5.50</h3>
+          </div>
+        </div>
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-7.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Latte macchiato</h3>
+            <p class="table__text">Espresso with frothed milk and chocolate</p>
+            <h3 class="table__title">$5.50</h3>
+          </div>
+        </div>
+        <div class="table__item">
+          <img class="table__img" src="assets/img/table/coffee-8.png" alt="coffee">
+          <div class="margin-block">
+            <h3 class="table__title">Coffee with cognac</h3>
+            <p class="table__text">Fragrant black coffee with cognac and whipped cream</p>
+            <h3 class="table__title">$6.50</h3>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
+
 </html>
