feat: add footer to menu page

--- a/menu.html
+++ b/menu.html
@@ -106,6 +106,31 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="social">
+        <h2 class="social__title">Sip, Savor, Smile. <span class="accent">It’s coffee time!</span></h2>
+        <ul class="social__list">
+          <li class="social__item"><a href="https://twitter.com/" target="_blank" class="social__link"><img
+                src="assets/svg/twitter.svg" alt="twitter icon" class="social__icon"></a></li>
+          <li class="social__item"><a href="https://instagram.com/" target="_blank" class="social__link"><img
+                src="assets/svg/instagram.svg" alt="instagram icon" class="social__icon"></a></li>
+          <li class="social__item"><a href="https://facebook.com/" target="_blank" class="social__link"><img
+                src="assets/svg/facebook.svg" alt="facebook icon" class="social__icon"></a></li>
+        </ul>
+      </div>
+      <div class="contacts">
+        <h3 class="contacts__title">Contact us</h3>
+        <ul class="contacts__list">
+          <li class="contacts__item"><a href="https://maps.app.goo.gl/z7v9hd5Py5jCm2s18" target="_blank"
+              class="contacts__link link-before1">8558 Green Rd., LA</a></li>
+          <li class="contacts__item"><a href="tel:+16035550123" target="_blank" class="contacts__link link-before2">+1 (603)
+              555-0123</a></li>
+          <li class="contacts__item"><a href="#" class="contacts__link link-before3">Mon-Sat: 9:00 AM – 23:00 PM</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
