feat: add favicon, fix links

--- a/menu.html
+++ b/menu.html
@@ -5,31 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffee House</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/normalize/normalize.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicon/site.webmanifest">
+  <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
   <header class="header">
     <div class="container header__container">
-      <img class="logo" src="assets/svg/logo.svg" alt="logo" width="100" height="60">
+      <a href="index.html"><img class="logo" src="assets/svg/logo.svg" alt="logo" width="100" height="60"></a>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link" href="#">Favorite coffee</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">About</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">Mobile app</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">Contact us</a></li>
+          <li class="nav__item"><a class="nav__link" href="index.html#favorite-coffee">Favorite coffee</a></li>
+          <li class="nav__item"><a class="nav__link" href="index.html#about">About</a></li>
+          <li class="nav__item"><a class="nav__link" href="index.html#mobile-app">Mobile app</a></li>
+          <li class="nav__item"><a class="nav__link" href="#menu-contact-us">Contact us</a></li>
         </ul>
       </nav>
-      <div class="menu">
-        <p class="menu__btn">Menu</p>
-        <img class="menu__img" src="assets/img/header/coffee-cup.png" alt="a cup of coffee" width="20" height="20">
+      <div class="menu-lock">
+        <p class="menu-lock__btn">Menu</p>
+        <img class="menu-lock__img" src="assets/img/header/coffee-cup.png" alt="a cup of coffee" width="20" height="20">
       </div>
     </div>
   </header>
   <main class="menu-main">
     <section class="offer">
       <div class="container offer__container">
-        <h2 class="offer__title">Behind each of our cups hides an <span class="accent">amazing surprise</span></h2>
+        <h1 class="offer__title">Behind each of our cups hides an <span class="accent">amazing surprise</span></h1>
         <div class="menu__btn-container">
           <button class="menu__btm menu__btm1 active">Coffee</button>
           <button class="menu__btm menu__btm2">Tea</button>
@@ -106,7 +117,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer" id="menu-contact-us">
     <div class="container footer__container">
       <div class="social">
         <h2 class="social__title">Sip, Savor, Smile. <span class="accent">It’s coffee time!</span></h2>
@@ -124,9 +135,11 @@
         <ul class="contacts__list">
           <li class="contacts__item"><a href="https://maps.app.goo.gl/z7v9hd5Py5jCm2s18" target="_blank"
               class="contacts__link link-before1">8558 Green Rd., LA</a></li>
-          <li class="contacts__item"><a href="tel:+16035550123" target="_blank" class="contacts__link link-before2">+1 (603)
+          <li class="contacts__item"><a href="tel:+16035550123" target="_blank" class="contacts__link link-before2">+1
+              (603)
               555-0123</a></li>
-          <li class="contacts__item"><a href="#" class="contacts__link link-before3">Mon-Sat: 9:00 AM – 23:00 PM</a></li>
+          <li class="contacts__item"><a href="#" class="contacts__link link-before3">Mon-Sat: 9:00 AM – 23:00 PM</a>
+          </li>
         </ul>
       </div>
     </div>
